add cookie httponly for jwt tokens
